<resources>
    <string name="app_name">FlipCard</string>
    <string name="support">Hỗ trợ</string>
    <string name="exit">Thoát </string>
    <string name="guideGame">Chọn hai thẻ để lật qua, nếu các hình ảnh giống nhau, bạn sẽ nhận được điểm, nếu không các tự lật lại hình ảnh.
     Bạn phải chọn chính xác các hình ảnh với một số lượt và thời gian nhất định</string>
    <string name="point">0</string>
    <string name="youWin">Bạn thắng</string>
    <string name="shuffle">Bạn vừa đổi bài</string>
    <string name="notShuffle">Đổi bài lỗi</string>
    <string name="startGame">Bắt đầu</string>
    <string name="confirm">Xác nhận</string>
    <string name="doYouRestart">Bạn có muốn chơi lại không?</string>
    <string name="doYouExit">Bạn có muốn thoát không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="comeback">Trở về</string>
    <string name="lose">Bạn thua</string>
    <string name="loading">Đang tải...</string>
    <string name="back">Trở về</string>
    <string name="playContinue">Chơi tiếp</string>
    <string name="playNew">Chơi mới</string>
    <string name="settings">Cài đặt</string>
    <string name="music">Âm thanh</string>
    <string name="sound">Nhạc nền</string>
    <string name="guide">Hướng dẫn</string>
    <string name="market">Cửa hàng</string>
    <string name="close">Đóng</string>
    <string name="score_highest">Điểm cao nhất</string>
    <string name="score_current">Điểm hiện tại</string>
    <string name="full_name">Unknown</string>
    <string name="rank">Top 1</string>
    <string name="point_highest">1</string>
    <string name="point_current">1</string>
    <string name="flag">Quốc kỳ</string>
    <string name="pokemon">Pokemon</string>
    <string name="outOfShuffle">Bạn đã hết lượt</string>
    <string name="doYouIntent">Bạn có muốn chuyển hướng không ?</string>
    <string name="congratulations">Chúc mừng bạn đã hoàn thành thử thách. Hãy giữ phong độ bạn nhé</string>
    <string name="youLose">Bạn đã không hoàn thành thử thách. Chúc bạn may mắn lần sau</string>
    <string name="pointsWin">0</string>
    <string name="author">Design by NPC and TD</string>
s</resources>